--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,67 @@ body {
 	position: relative;
 }
 
+header {
+	width: 100%;
+}
+
+header nav {
+	width: 60%;
+    margin: 2% auto 0;
+}
+
+h1 {
+	font-size: 1.8rem;
+}
+
+#scene-form {
+	padding: 1.0rem;
+}
+
+#scene-form #scene-input {
+	font-size: 0.8rem;
+}
+
+#scene-form #add-scene {
+
+}
+
 #buttons-view button {
-	background-color: #cccccc;
+	background-color: #bbbbbb;
     color: #ffffff;
-    font-size: 1.2rem;
-    padding: 0.6rem 0.8rem;
+    font-size: 0.8rem;
+    padding: 0.2rem 0.5rem;
     margin-right: 0.5rem;
+    border-radius: 0.6rem;
 }
 
 #buttons-view button button {
+
+}
+
+#container {
+	width: 100%;
+}
+
+#scenes-view {
+	width: 60%;
+    margin: 2% auto 0;
+}
+
+#scenes-view > div {
+	float: left;
+}
+
+#scenes-view p {
+	text-align: center;
+    margin: 10px 0;
+    color: #aaaaaa;
+}
+
+#scenes-view .gif {
+	margin: 0 8px;
+}
+
+footer {
 
 }
